# gemm_sm90

./: CMakeLists.txt
csrc/: CMakeLists.txt  config.hpp  kernel.cu  pybind_wrapper.cpp
test/: test_kernel.py
